fix z-index legend

--- a/components/inputs/input.module.css
+++ b/components/inputs/input.module.css
@@ -73,7 +73,7 @@
     font-size: inherit;
     color: var(--iron);
     background-color: var(--silver);
-    z-index: 10;
+    z-index: 2;
     border-radius: 0 6px 6px 0;
     align-content: center;
     padding: 0 10px;
